--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A test application to practice using firebase as a BaaS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/ash-automates/Firebase-Test-App/issues"
   },
-  "homepage": "https://github.com/ash-automates/Firebase-Test-App#readme"
+  "homepage": "https://github.com/ash-automates/Firebase-Test-App#readme",
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
