--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   },
   "homepage": "https://github.com/ash-automates/Firebase-Test-App#readme",
   "devDependencies": {
+    "dotenv-webpack": "^8.0.1",
+    "process": "^0.11.10",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "firebase": "^9.9.4"
   }
 }
